Enable compilation with Java 9
This commit also suppresses warning generated by the javac 9 compiler,
and fixes some javadoc links.